--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,84 @@
 body {
-    margin: 0;
-    padding: 0;
     font-family: sans-serif;
+    background-color: #315481;
+    background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+    background-attachment: fixed;
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    padding: 0;
+    margin: 0;
+
+    font-size: 14px;
+}
+
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    min-height: 100%;
+}
+
+.counter {
+    background: #d2edf4;
+    background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
+    padding: 10px 15px 10px 15px;
+    position: relative;
+}
+
+h1 {
+    font-size: 1.5em;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: inline-block;
+    margin-right: 1em;
+}
+
+.new-task input {
+    box-sizing: border-box;
+    padding: 10px 0;
+    /* background: transparent; */
+    border: none;
+    width: 100%;
+    padding-right: 80px;
+    padding-left: 10px;
+    font-size: 1em;
+}
+
+/* .new-task input:focus{ */
+/*     outline: 10; */
+/*     background: transparent; */
+/* } */
+
+.delete {
+    float: left;
+    font-weight: bold;
+    background: none;
+    font-size: 1em;
+    border: none;
+    position: relative;
+}
+
+li {
+    position: relative;
+    /* list-style: none; */
+    /* padding: 15px; */
+    /* border-bottom: #eee solid 1px; */
+}
+
+li .text {
+    /* margin-left: 10px; */
+}
+
+/* li.checked { */
+/*     color: #888; */
+/* } */
+
+li.checked .text {
+    color: #888;
+    text-decoration: line-through;
 }
